# pyflock

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-17-pyflock-design.md
src/pyflock/: __init__.py  config.py
src/pyflock/api/: __init__.py  __main__.py  app.py  schemas.py
src/pyflock/cli/: __init__.py  main.py
src/pyflock/core/: __init__.py  db.py  enums.py  keys.py  models.py  queue.py  redis_client.py  registry.py  repository.py  retry.py
src/pyflock/scheduler/: __init__.py  __main__.py  reaper.py
src/pyflock/worker/: __init__.py  __main__.py  agent.py  executor.py
tests/: conftest.py  helpers.py  test_api.py  test_executor.py  test_integration.py  test_queue.py  test_reaper.py  test_registry.py  test_repository.py  test_retry.py  test_worker.py
